kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-django
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-django
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-django
    spec:
      containers:
        - image: public.ecr.aws/n0b3b3j7/cloud:latest
          imagePullPolicy: Always
          name: app-django
          ports:
            - containerPort: 8000
        - image: public.ecr.aws/n0b3b3j7/nginx:latest
          imagePullPolicy: Always
          name: app-nginx
          ports:
            - containerPort: 80
