kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-django
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-django
