kubernetes/django-full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-django
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-django
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-django
    spec:
      containers:
        - image: public.ecr.aws/n0b3b3j7/cloud:latest
          imagePullPolicy: Always
          name: app-django
          ports:
            - containerPort: 8000
        - image: public.ecr.aws/n0b3b3j7/nginx:latest
          imagePullPolicy: Always
          name: app-nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-django
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-django
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-django
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-django
              servicePort: 80
